Migrate graph backend to ArcadeDB, improve search quality, add skeleton/indexing CLI options
Core:
- Replace JGraphT + GraphML with ArcadeDB embedded graph database for CallGraph and ModuleGraph
- Fix flushCalls() to use in-transaction vertex object refs instead of SQL subqueries
- Add setAsyncFlush(false) to ensure close() fully persists before returning
- Add --force, --full, --no-embed, --single, --depth, --project-threads to index CLI command
- Add skeleton command with filesystem tree output, --path and --depth filtering

Search:
- Per-field BM25 similarity (k1/b tuned per field type: identifier vs text vs body)
- Stronger test/benchmark file penalties (0.30x and 0.25x)
- Project affinity boost (1.5x for results matching the requested project)
- Boundary exit point server-side cap with totalExitPoints count in response
- calledTargets() for O(E) entry point scan replacing O(M×L) nested callers() loop

Web UI:
- Search results dropdown with term highlighting
- Click result to load call graph and focus node

Infra:
- setup.sh: build + install JAR + Python client + daemon restart
- arcadedb.txWalFlush=2 in surefire argLine for test stability

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>